--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         position: fixed;
         bottom: 25px;
         right: 25px;
+        cursor: pointer;
+        box-shadow: 0 0 0 0 #fff, 0 0 0 0 #fff;
+        transition: box-shadow 1.1s cubic-bezier(.19, 1, .22, 1);
+    }
+    .menu:hover{
+        box-shadow: 0 0 0 8px #fff, 0 0 0 8px #fff;
     }
     .hamburguer{
         position: relative;
@@ -55,6 +61,14 @@
         display: none;
     }
 
+    input:checked ~ ul{
+        visibility: visible;
+    }
+
+    input:checked ~ label .menu{
+        box-shadow: 0 0 0 130vw #fff, 0 0 0 130vh #fff;
+    }
+
     input:checked ~ label .hamburguer{
         transform: rotate(45deg);
     }
@@ -66,6 +80,24 @@
         transform: rotate(90deg);
         bottom: 0;
     }
+
+    ul{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        list-style: none;
+        visibility: hidden;
+        transition: .25s .1s cubic-bezier(0, 1.07, 0, 1.02);
+    }
+
+    a{
+        font-size: 47px;
+        color: #00cec9;
+        text-decoration: none;
+        display: block;
+        margin-bottom: 40px;
+    }
 </style>
 <body>
 
@@ -76,6 +108,12 @@
             <span class="hamburguer"></span>
         </div>
     </label>
+
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
 
 
 
